--- a/.config/mpv/input.conf
+++ b/.config/mpv/input.conf
@@ -13,4 +13,6 @@ UP add volume 5
 
 0 seek 0 absolute 
 
-c run "/bin/sh" "-c" "echo \"${stream-path}\""
+o script-binding toggle-osc-auto-always
+
+c run "/bin/sh" "-c" "echo \"${path}\""
